--- a/lectures.html
+++ b/lectures.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="/assets/images/logo.jpeg">
+        <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
         <title>منصة التميز التعليمية</title>
         <link rel='stylesheet' href='/assets/style/bulma-rtl.min.css'>
         <link rel='stylesheet' href='/assets/style/main.css'>
