--- a/lectures.html
+++ b/lectures.html
@@ -25,10 +25,10 @@
         <section class="about hero hero-Lect block bordered">
             <div class="hero-body nomarg">
                 <div class="has-text-centered">
-                    <h1 class="title is-1 has-text is-red">Lectures</h1>
-                    <h3 class="title is-5 has-text is-red">Watch > Learn > Succed</h3>
+                    <h1 class="title is-1 has-text is-red">المحاضرات</h1>
+                    <h3 class="title is-5 has-text is-red">شاهد الشرح > تمرن > انجح</h3>
                     <div class="has-text-centered">
-                        <a href="/" class="has-text-white"> Home </a> <span class="has-text-white">/</span> <span class="has-text-third"> Lectures </span>
+                        <a href="/" class="has-text-white"> الرئيسية </a> <span class="has-text-white">/</span> <span class="has-text-third"> المحاضرات</span>
                     </div>
                 </div>
             </div>
