--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
     
     <section class="about nabout">
         <div class="logocont">
+            <figure style="width: 100%;" class="has-text-centered">
+                <img src="/assets/images/logo2.png" style="max-width: 200px;" class="has-text-centered" alt="منصة التميز التعليمية">
+            </figure>
             <div class="container block">
                 <div class="content1 has-text-centered is-flex is-align-items-center is-flex-direction-column">
                     <h2 class="title is-3 is-red">منصة التميز التعليمية</h2>
